@@ -32,6 +32,7 @@
 #include <sipwitch/modules.h>
 #include <sipwitch/process.h>
 #include <sipwitch/digest.h>
+#include <sipwitch/stats.h>
 #include <sipwitch/uri.h>
 #include <sipwitch/rtpproxy.h>
 
