@@ -32,6 +32,9 @@ stop and shutdown the running sipwitch daemon.
 \fBmessage\fR \fIext\fR \fI``Text''\fR
 send a short text message to a registered extension.
 .TP
+\fBperiod|pstats\fR
+dump and flush periodic stats, often used for cron.
+.TP
 \fBregistry\fR
 dump all user agent registrations to stdout.
 .TP
@@ -49,6 +52,9 @@ create snapshot diagnostic file from daemon.
 .TP
 \fBstate\fR \fIid\fR
 set daemon to specified state id.
+.TP
+\fBstats\fR
+dump server call statistics.
 .TP
 \fBverbose\fR \fIlevel\fR
 set daemon error logging verbosity.
